:pull: https://github.com/elastic/beats/pull/


[[release-notes-8.0.0]]
=== Agent version 8.0.0


==== Breaking changes
- Rename agent to elastic-agent {pull}17391[17391]
- Change fleet.yml structure, causes upgraded agent to register as new agent {pull}19248[19248]
- Remove obfuscation of fleet.yml, causes re-enroll of agent to Fleet {pull}19678[19678]

==== Bugfixes

- Fixed tests on windows {pull}16922[16922]
- Fixed installers for SNAPSHOTs and windows {pull}17077[17077]
- Fixed merge of config {pull}17399[17399]
- Handle abs paths on windows correctly {pull}17461[17461]
- Improved cancellation of agent {pull}17318[17318]
- Fixed process spawning on Windows {pull}17751[17751]
- Fix issues when running `mage package` for all the platforms. {pull}17767[17767]
- Rename the User-Agent string from Beats Agent to Elastic Agent. {pull}17765[17765]
- Remove the kbn-version on each request to the Kibana API. {pull}17764[17764]
- Fixed injected log path to monitoring beat {pull}17833[17833]
- Make sure that the Elastic Agent connect over TLS in cloud. {pull}17843[17843]
- Moved stream.* fields to top of event {pull}17858[17858]
- Use /tmp for default monitoring endpoint location for libbeat {pull}18131[18131]
- Use default output by default {pull}18091[18091]
- Fix panic and flaky tests for the Agent. {pull}18135[18135]
- Fix default configuration after enroll {pull}18232[18232]
- Fix make sure the collected logs or metrics include streams information. {pull}18261[18261]
- Fix version to 7.8 {pull}18286[18286]
- Fix an issue where the checkin_frequency, jitter, and backoff options where not configurable. {pull}17843[17843]
- Ensure that the beats uses the params prefer_v2_templates on bulk request. {pull}18318[18318]
- Stop monitoring on config change {pull}18284[18284]
- Enable more granular control of monitoring {pull}18346[18346]
- Fix jq: command not found {pull}18408[18408]
- Avoid Chown on windows {pull}18512[18512]